Switch to Runtime.exec for ldd --version